--- a/index.html
+++ b/index.html
@@ -640,9 +640,9 @@
     <button type="button" class="w-full px-3 py-2 rounded-lg bg-blue-600 text-white" data-open="learnModal" aria-label="Start a discussion">
       Discuss
     </button>
-    <button type="button" class="w-full px-3 py-2 rounded-lg bg-blue-600 text-white" data-action="open-chat" aria-controls="chatWin" aria-expanded="false">
-      Chat
-    </button>
+    // <button type="button" class="w-full px-3 py-2 rounded-lg bg-blue-600 text-white" data-action="open-chat" aria-controls="chatWin" aria-expanded="false">
+     // Chat
+    //</button>
     <button type="button" class="w-full px-3 py-2 rounded-lg bg-blue-600 text-white" data-open="promoteModal" aria-label="Promote your business">
       Promote
     </button>
@@ -743,4 +743,5 @@
 </body>
   
 </html>
+
 
