--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <aside id="sidebar" class="bg-white border border-gray-200 rounded-2xl p-4 md:sticky md:top-20 h-max">
       <div class="flex items-center justify-between mb-2">
         <h3 class="text-lg font-semibold">Search</h3>
-        <span class="badge">working</span>
+        <span class="badge"></span>
       </div>
       <form id="siteSearchForm" class="mb-6" role="search">
         <label class="sr-only" for="siteSearch">Search</label>
@@ -749,6 +749,7 @@
 </body>
   
 </html>
+
 
 
 
