Fixing floating chat button on mobile

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
   </main>
 
   <!-- Floating AI chat launcher -->
-  <button id="chatLauncher" class="fixed bottom-6 right-6 rounded-full shadow-lg px-5 py-3 bg-blue-600 text-white hover:bg-blue-700">Start | Ask City | Chat</button>
+  <button id="chatLauncher" class="fixed bottom-6 right-6 z-50 rounded-full shadow-lg px-5 py-3 bg-blue-600 text-white hover:bg-blue-700">Start | Ask City | Chat</button>
 
   <!-- Chat window (draggable) -->
   <div id="chatWin" class="hidden fixed md:w-[360px] md:h-[520px] z-40" style="right:24px; bottom:24px;">
@@ -741,6 +741,7 @@
 </body>
   
 </html>
+
 
 
 
